--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:orcl
-spring.datasource.username=${DB_ORACLE_FIAP_USER}
-spring.datasource.password=${DB_ORACLE_FIAP_PASSWORD}
+spring.datasource.username=${RM566320}
+spring.datasource.password=${161006}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.hibernate.ddl-auto=update
