--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
+            <version>23.7.0.25.01</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
